--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,15 +8,35 @@
 
 <ion-content padding>
   <p>Bem vindo, {{nome}}</p>
+  <p>Sexo; {{sexo}}</p>
   <ion-button [color]="cor" expand="full" shape="round">
-     Cor
+    Cor
   </ion-button>
-  <ion-button (click)="trocarCor()" color="primary" expand="full" shape="round"> 
+  <ion-button (click)="trocarCor()" color="primary" expand="full" shape="round">
     Troca Cor
   </ion-button>
-  <ion-icon  class="icon" [name]="humor"color="primary"></ion-icon>
-<ion-item>
-  <label>Humor</label>
-  <ion-toggle [checked]="checked_humor" color="primary" (ionChange)="mudaHumor()" slot="end"></ion-toggle>
- </ion-item>
+  <ion-icon class="icon" [name]="humor" color="primary"></ion-icon>
+  <ion-item>
+    <label>Humor</label>
+    <ion-toggle [checked]="checked_humor" color="primary" (ionChange)="mudaHumor()" slot="end"></ion-toggle>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Sexo</ion-label>
+    <ion-select placeholder="sexo" (ionChange)="selecionaSexo($event)">
+    <ion-select-option value="feminino">Feminino</ion-select-option>
+    <ion-select-option value="masculino">Masculino</ion-select-option>
+    </ion-select>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Nome</ion-label>
+    <ion-input placeholder="nome" (ionChange)="defineNome($event)"></ion-input>
+  </ion-item>
+  <ion-button padding (click)="irParaDetalhes" color="primary"
+  shape="round" expand="full">
+    Ok
+  </ion-button>
+
+
 </ion-content>
